--- a/REIP_front/index.html
+++ b/REIP_front/index.html
@@ -64,9 +64,9 @@
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <form class="form-inline">
-            <input class="form-control mr-sm-2" type="text" placeholder="User Name" aria-label="User Name">
-            <input class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Password">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log In</button>
+            <input class="form-control-sm mr-sm-2" type="text" placeholder="User Name" aria-label="User Name">
+            <input class="form-control-sm mr-sm-2" type="password" placeholder="Password" aria-label="Password">
+            <button class="btn btn-outline-success btn-sm my-2 my-sm-0" type="submit">Log In</button>
         </form>
         </ul>
     </div>
