hero image and text layed out properly

--- a/REIP_front/index.html
+++ b/REIP_front/index.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
   <!-- Custom styles for this template -->
-  <link href="css/landing-page.min.css" rel="stylesheet">
+  <link href="css/landing-page.css" rel="stylesheet">
 
 </head>
 
@@ -78,9 +78,12 @@
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Build a landing page for your business or project and generate more leads!</h1>
+        <div class="col mx-auto">
+          <h1 class="mb-5">Do you want to generate passive income today while building wealth for tomorrow?</h1>
         </div>
+        <div class="col"></div>
+      </div>
+      <div class="row">
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
             <div class="form-row">
