features section added. Need to update color scheme.

--- a/REIP_front/index.html
+++ b/REIP_front/index.html
@@ -107,28 +107,45 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-screen-desktop m-auto text-primary"></i>
+              <!-- <i class="icon-screen-desktop m-auto text-primary"></i> -->
+              <img src="images/Image-1.svg" class="mx-auto">
             </div>
-            <h3>Fully Responsive</h3>
-            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+            <h3>Learn</h3>
+            <p class="dp-feature mb-0 text-justify">Do you want to earn passive income but are not sure how to get started?<br><br>
+              Does a quarterly check sound nice but you're afraid that you'll lose money to rookie mistakes?<br><br>
+              Learn what you need to know to invest with confidence, so that you can start earning passive income while growing your nest egg.<br><br>
+              Sign up for our FREE DIY training, as well a fully guided course to start earning money as quickly as possible.<br><br></p>
+            <button type="button" class="btn btn-primary">I want to learn more!</button>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-layers m-auto text-primary"></i>
+              <img src="images/todo-2103511.svg" class="mx-auto">
             </div>
-            <h3>Bootstrap 4 Ready</h3>
-            <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+            <h3>Plan</h3>
+            <p class="dp-feature mb-0 text-justify">"How much should I put into this deal?"<br><br>
+              "What if I lock up all of my savings and it won't be there when I need it?"<br><br>
+              Great questions!<br><br>
+              We've helped many people just like you create a plan to invest the right amount in the right deals to minimize risk and have the money they need to be available when they need it.<br><br>
+            </p>
+            <button type="button" class="btn btn-primary">Let's talk</button>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-check m-auto text-primary"></i>
+              <img src="images/growth-arrow.svg" class="mx-auto">
             </div>
-            <h3>Easy to Use</h3>
-            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+            <h3>Invest</h3>
+            <p class="dp-feature mb-0 text-justify">You know how to review a deal.<br><br>
+              You know how much to invest.<br><br>
+              Now you just need good deals.<br><br>
+              Since 2016 we've helped many investors just like you build a diversified real estate investment portfolio.<br><br>
+              Now you can invest with low minimums into diverse offerings and have the financial security of stable passive income that you've always dreamed of.<br><br>
+              Be the first to know about our latest deals!<br><br>
+            </p>
+            <button type="button" class="btn btn-primary">Sign Up</button>
           </div>
         </div>
       </div>
