added testimonial carousel

--- a/REIP_front/index.html
+++ b/REIP_front/index.html
@@ -153,7 +153,7 @@
   </section>
 
   <!-- Image Showcases -->
-  <section class="showcase">
+ <!--  <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
@@ -178,13 +178,13 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Testimonials -->
   <section class="testimonials text-center bg-light">
     <div class="container">
-      <h2 class="mb-5">What people are saying...</h2>
-      <div class="row">
+      <h2 class="mb-5">What people are saying on LinkedIn...</h2>
+      <!-- <div class="row">
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
@@ -206,6 +206,44 @@
             <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
           </div>
         </div>
+      </div> -->
+       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="dp-carousel-text">
+              <p>"Dovid's "Jumpstart your Real Estate Investing" course is a great introduction to the world of real estate investing. The course is loaded with useful information and provides a detailed overview of the different types of real estate investment options and the basic financial measures used to analyze a deal. Dovid has a deep understanding of real estate investing and is able to explain the material and answer any questions very clearly.<br><br>
+              I'm glad I took this course and would recommend it for anyone interested in better understanding the basic principles of real estate investing"<br><br>
+              - Michael Weinblatt</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="dp-carousel-text">
+              <p>"I recently completed Dovid’s course and thoroughly enjoyed it. Dovid displays a mastery of estate concepts and has a wealth of investment experience. His presentation was highly informative, engaging, and backed by real life examples. He is highly knowledgeable, and his course is designed to initiate even those with no investment experience into the world of real estate investing. One thing that comes across very clearly is Dovid’s knack for carefully scrutinizing deals that come his way to ensure that he chooses the best possible investment opportunities for his investors.<br><br>
+                Whether you already have an interest in real estate investing or are looking for a way to learn more, I would highly recommend getting in touch with Dovid."<br><br>
+                -Moshe Rapps
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="dp-carousel-text">
+              <p>"I took Dovid Preil's real estate course and what impressed me the most was how evident it his knowledge and understanding of the real estate investment market is. It's one thing to know your industry, but to break it down into easy to understand language requires true understanding."<br><br>
+                -Dani Loigman</p>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
   </section>
