contact form set. Need to fix bottom signup and image

--- a/REIP_front/index.html
+++ b/REIP_front/index.html
@@ -251,25 +251,45 @@
   <!-- Call to Action -->
   <section class="call-to-action text-white text-center">
     <div class="overlay"></div>
-    <div class="container">
       <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Ready to get started? Sign up now!</h2>
+        <div class="col">
+          <div class="col-xl-9 mx-auto">
+            <h2 class="mb-4">Ready to get started? Sign up now!</h2>
+          </div>
+          <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+            <form>
+              <div class="form-row">
+                <div class="col-12 col-md-9 mb-2 mb-md-0">
+                  <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
+                </div>
+                <div class="col-12 col-md-3">
+                  <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+        <div class="col">
+          <div class="dp-contact-form">
+            <h1>Contact Us</h1>
+            <p><br><br></p>
           <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
+            <div class="form-group">
+              <label for="contactFormName">Name</label>
+              <input type="text" class="form-control" id="contactFormName" placeholder="Name">
+            <div class="form-group">
+              <label for="contactFormEmail">Email address</label>
+              <input type="email" class="form-control" id="contactFormEmail" placeholder="name@example.com">
             </div>
+            <div class="form-group">
+              <label for="contactFormText">Example textarea</label>
+              <textarea class="form-control" id="contactFormText" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary mb-2">Submit</button>
           </form>
         </div>
       </div>
-    </div>
+      </div>
   </section>
 
   <!-- Footer -->
