fixed services, set navbar on top, need to adjust sizing of other elements to accomodate. Testimonials needs work.

--- a/REIP_front/index.html
+++ b/REIP_front/index.html
@@ -20,6 +20,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/landing-page.css" rel="stylesheet">
+  
 
 </head>
 
@@ -39,7 +40,7 @@
                 <a class="nav-link" href="#">Learn</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="#services">Services</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Testimonials</a>
@@ -101,89 +102,72 @@
   </header>
 
   <!-- Icons Grid -->
-  <section class="features-icons bg-light text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <!-- <i class="icon-screen-desktop m-auto text-primary"></i> -->
-              <img src="images/Image-1.svg" class="mx-auto">
-            </div>
-            <h3>Learn</h3>
-            <p class="dp-feature mb-0 text-justify">Do you want to earn passive income but are not sure how to get started?<br><br>
-              Does a quarterly check sound nice but you're afraid that you'll lose money to rookie mistakes?<br><br>
-              Learn what you need to know to invest with confidence, so that you can start earning passive income while growing your nest egg.<br><br>
-              Sign up for our FREE DIY training, as well a fully guided course to start earning money as quickly as possible.<br><br></p>
-            <button type="button" class="btn btn-primary">I want to learn more!</button>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <img src="images/todo-2103511.svg" class="mx-auto">
-            </div>
-            <h3>Plan</h3>
-            <p class="dp-feature mb-0 text-justify">"How much should I put into this deal?"<br><br>
-              "What if I lock up all of my savings and it won't be there when I need it?"<br><br>
-              Great questions!<br><br>
-              We've helped many people just like you create a plan to invest the right amount in the right deals to minimize risk and have the money they need to be available when they need it.<br><br>
-            </p>
-            <button type="button" class="btn btn-primary">Let's talk</button>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <img src="images/growth-arrow.svg" class="mx-auto">
-            </div>
-            <h3>Invest</h3>
-            <p class="dp-feature mb-0 text-justify">You know how to review a deal.<br><br>
-              You know how much to invest.<br><br>
-              Now you just need good deals.<br><br>
-              Since 2016 we've helped many investors just like you build a diversified real estate investment portfolio.<br><br>
-              Now you can invest with low minimums into diverse offerings and have the financial security of stable passive income that you've always dreamed of.<br><br>
-              Be the first to know about our latest deals!<br><br>
-            </p>
-            <button type="button" class="btn btn-primary">Sign Up</button>
-          </div>
-        </div>
+    <div class="features-icons bg-light text-center">
+     <div class="services-grid">
+      <div class='st'> <h1 id="services">Services</h1> </div>
+      <div class='learn-img'>
+        <img src="images/image-1.jpg" alt="unable to load" height="100%">
+      </div>
+      <div class='plan-img'>
+        <img src="images/todo-2103511.svg" alt='unable to load' height="100%">
+      </div>
+      <div class="invest-img">
+        <img src="images/growth-arrow.svg" alt="unable to load" height="100%">
+      </div>
+      <div class="learn-srv">
+        <p class="dp-feature mb-0 text-justify">Do you want to earn passive income but are not sure how to get started?<br><br>
+                Does a quarterly check sound nice but you're afraid that you'll lose money to rookie mistakes?<br><br>
+                Learn what you need to know to invest with confidence, so that you can start earning passive income while growing your nest egg.<br><br>
+                Sign up for our FREE DIY training, as well a fully guided course to start earning money as quickly as possible.<br><br></p>
+        <button type="button" class="btn btn-primary">I want to learn more!</button>
+      </div>
+      <div class="plan-srv">
+        <p class="dp-feature mb-0 text-justify">"How much should I put into this deal?"<br><br>
+                "What if I lock up all of my savings and it won't be there when I need it?"<br><br>
+                Great questions!<br><br>
+                We've helped many people just like you create a plan to invest the right amount in the right deals to minimize risk and have the money they need to be available when they need it.<br><br>
+              </p>
+              <button type="button" class="btn btn-primary">Let's talk</button>
+      </div>
+      <div class="invest-srv">
+        <p class="dp-feature mb-0 text-justify">"How much should I put into this deal?"<br><br>
+                "What if I lock up all of my savings and it won't be there when I need it?"<br><br>
+                Great questions!<br><br>
+                We've helped many people just like you create a plan to invest the right amount in the right deals to minimize risk and have the money they need to be available when they need it.<br><br>
+              </p>
+              <button type="button" class="btn btn-primary">Let's talk</button>
       </div>
     </div>
-  </section>
+  </div>
 
-  <!-- Image Showcases -->
- <!--  <section class="showcase">
-    <div class="container-fluid p-0">
-      <div class="row no-gutters">
 
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Fully Responsive Design</h2>
-          <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
-        </div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
-        <div class="col-lg-6 my-auto showcase-text">
-          <h2>Updated For Bootstrap 4</h2>
-          <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
-        </div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Easy to Use &amp; Customize</h2>
-          <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
-        </div>
-      </div>
-    </div>
-  </section> -->
+
 
   <!-- Testimonials -->
-  <section class="testimonials text-center bg-light">
+  <section class="testimonials text-center h4 bg-light">
     <div class="container">
       <h2 class="mb-5">What people are saying on LinkedIn...</h2>
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+       <div class="carousel-inner">
+         <div class="carousel-item active">
+           <img class="d-block w-100" src="images/weinblatt_recommendation.jpg" alt="First slide">
+         </div>
+         <div class="carousel-item">
+          <img class="d-block w-100" src="images/rapps_recommendation.jpg" alt="Second slide">
+         </div>
+         <div class="carousel-item">
+          <img class="d-block w-100" src="images/loigman_recommendation.jpg" alt="Third slide">
+         </div>
+      </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
       <!-- <div class="row">
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
@@ -207,8 +191,8 @@
           </div>
         </div>
       </div> -->
-       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
+       <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-inner">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
@@ -216,14 +200,14 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="dp-carousel-text">
-              <p>"Dovid's "Jumpstart your Real Estate Investing" course is a great introduction to the world of real estate investing. The course is loaded with useful information and provides a detailed overview of the different types of real estate investment options and the basic financial measures used to analyze a deal. Dovid has a deep understanding of real estate investing and is able to explain the material and answer any questions very clearly.<br><br>
+              <p>"Dovid's "Jumpstart your Real Estate Investing" course is a great introduction to the world of real estate investing. The course is loaded with useful information and provides a detailed overview of the different types of real estate investment options and the basic financial measures used to analyze a deal. Dovid has a deep understanding of real estate investing and is able to explain the material and answer any questions very clearly.
               I'm glad I took this course and would recommend it for anyone interested in better understanding the basic principles of real estate investing"<br><br>
               - Michael Weinblatt</p>
             </div>
           </div>
           <div class="carousel-item">
             <div class="dp-carousel-text">
-              <p>"I recently completed Dovid’s course and thoroughly enjoyed it. Dovid displays a mastery of estate concepts and has a wealth of investment experience. His presentation was highly informative, engaging, and backed by real life examples. He is highly knowledgeable, and his course is designed to initiate even those with no investment experience into the world of real estate investing. One thing that comes across very clearly is Dovid’s knack for carefully scrutinizing deals that come his way to ensure that he chooses the best possible investment opportunities for his investors.<br><br>
+              <p>"I recently completed Dovid’s course and thoroughly enjoyed it. Dovid displays a mastery of estate concepts and has a wealth of investment experience. His presentation was highly informative, engaging, and backed by real life examples. He is highly knowledgeable, and his course is designed to initiate even those with no investment experience into the world of real estate investing. One thing that comes across very clearly is Dovid’s knack for carefully scrutinizing deals that come his way to ensure that he chooses the best possible investment opportunities for his investors.
                 Whether you already have an interest in real estate investing or are looking for a way to learn more, I would highly recommend getting in touch with Dovid."<br><br>
                 -Moshe Rapps
               </p>
@@ -231,7 +215,7 @@
           </div>
           <div class="carousel-item">
             <div class="dp-carousel-text">
-              <p>"I took Dovid Preil's real estate course and what impressed me the most was how evident it his knowledge and understanding of the real estate investment market is. It's one thing to know your industry, but to break it down into easy to understand language requires true understanding."<br><br>
+              <p>"a"<br><br>
                 -Dani Loigman</p>
             </div>
           </div>
@@ -244,7 +228,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-      </div>
+      </div> -->
     </div>
   </section>
 
@@ -339,10 +323,10 @@
   <footer class="footer bg-light">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+        <div class="col-lg-12 h-100 text-center text-lg-center my-auto">
           <ul class="list-inline mb-2">
             <li class="list-inline-item">
-              <a href="#">About</a>
+              <a href="#">About Us</a>
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
@@ -357,26 +341,7 @@
               <a href="#">Privacy Policy</a>
             </li>
           </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2019. All Rights Reserved.</p>
-        </div>
-        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
-          <ul class="list-inline mb-0">
-            <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-facebook fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-instagram fa-2x fa-fw"></i>
-              </a>
-            </li>
-          </ul>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; YDLP Investment Group 2019. All Rights Reserved.</p>
         </div>
       </div>
     </div>
@@ -389,3 +354,5 @@
 </body>
 
 </html>
+
+<!-- features-icons bg-light text-center -->
