fixed header crash issue with css before

--- a/REIP_front/index.html
+++ b/REIP_front/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <link rel="shortcut icon" type="image/png" href="images/YDLP_Logo_favicon.png"/>
 
   <title>YDLP Investments</title>
 
@@ -73,7 +74,7 @@
     </div>
 </nav>
   
-
+<div class=scroll-wrapper>
   <!-- Masthead -->
   <header class="masthead text-white text-center">
     <div class="overlay"></div>
@@ -102,9 +103,9 @@
   </header>
 
   <!-- Icons Grid -->
-    <div class="features-icons bg-light text-center">
+    <div class="features-icons bg-light text-center services" id="services">
      <div class="services-grid">
-      <div class='st'> <h1 id="services">Services</h1> </div>
+      <div class='st'> <h1 >Services</h1> </div>
       <div class='learn-img'>
         <img src="images/image-1.jpg" alt="unable to load" height="100%">
       </div>
@@ -346,6 +347,7 @@
       </div>
     </div>
   </footer>
+</div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
